<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.CheckoutActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/toolbar_checkout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />
        <TextView
            android:id="@+id/tv_title_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="24dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_shipping_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_quantity_counter"
                android:backgroundTint="@color/product_bg"
                android:padding="16dp"
                android:layout_marginBottom="24dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/tv_change_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textColor="@color/purple_primary"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_address_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/address_details"
                    android:textColor="@color/gray_text"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/gray_text"
                    android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_quantity_counter"
            android:backgroundTint="@color/product_bg"
            android:padding="16dp"
            android:layout_marginBottom="24dp"
            >
            <LinearLayout
                android:id="@+id/payment_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/iv_cash"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_radio_on"
                    android:layout_marginEnd="12dp"
                    app:tint="@color/hint_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_cash"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/payment_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/iv_card"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_radio_off"
                    android:layout_marginEnd="12dp"
                    app:tint="@color/hint_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_credit_card"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/payment_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/iv_paypal"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_radio_off"
                    android:layout_marginEnd="12dp"
                    app:tint="@color/hint_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_paypal"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
            <TextView
                android:id="@+id/tv_order_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sub_total"
                    android:textColor="@color/gray_text" />
                <TextView
                    android:id="@+id/tv_summary_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_total_num"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/tv_shipping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shipping"
                android:textColor="@color/gray_text" />
            <TextView
                android:id="@+id/tv_summary_shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_num"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_gray"
            android:layout_marginBottom="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_summary_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_num"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        >
        <Button
            android:id="@+id/btn_place_order"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_dark"/>
    </LinearLayout>

</LinearLayout>
